# foris-controller-foris-forwarder

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
foris_forwarder/: __main__.py  app.py  client.py  configuration.py  forwarder.py  logger.py  supervisor.py  zconf.py
foris_forwarder/listener/: __main__.py
tests/: conftest.py  test_client.py  test_configuration.py  test_forwarder.py  test_zconf.py
tests/blackbox/: conftest.py  test_forwarding.py  test_subsubordinate.py  test_zconf_reconnect.py
tests/uci/: fosquitto
tests/unit/: conftest.py  fosquitto  test_client.py  test_configuration.py  test_forwarder.py  test_supervisor.py  test_zconf.py  uci
